# learnOpenGl

./: .gitignore  123.txt  CMakeLists.txt  README.md  графики.txt
src/: Shader.cpp  Shader.h  checkError.h  main.cpp  utils.h
src/Renderer/: Brush.cpp  Brush.h  Camera.cpp  Camera.h  Fire.cpp  Fire.h  Lighting.h  MCircle.cpp  MCircle.h  Mesh.h  Model.h  ShaderProgram.cpp  ShaderProgram.h  StaticModel.h  particle_generator.cpp  particle_generator.h
src/Renderer/depricated/: ShaderProgram.cpp
src/assets/: shader.fs  shader.vs
src/assets/objects/fireplace/: fireplace.mtl
src/assets/shaders/: circleGeometry.gs  floor.fs  lamp.fs  lamp.vs  point.fs  point.vs  point2.vs  point3.vs  shader.fs  shader.vs  simpleCubeShader.fs
